# lshw-windows-emulator

./: .gitignore  AGENTS.md  ARCHITECTURE.md  AUTHORS  CONTRIBUTING.md  INSTALL  MANIFEST.in  ONBOARDING.md  README.md  TROUBLESHOOTING.md  mkdocs.yml  pyproject.toml  requirements.txt  role_audit_report.md  setup.py  setup_msi.py
.github/workflows/: audit_dependencies.yml  build-msi.yml  build-wpt.yml  ci.yml  release.yml
docs/: index.md
docs/adr/: 001-factory-registry-pattern.md  002-wmi-entity-allowlist.md  003-name-matching-strategy.md  README.md
docs/explanation/: architecture.md
docs/how-to/: adding-hardware-classes.md  contributing.md  troubleshooting.md  using-the-python-api.md
docs/reference/: cli.md  wmi-mapping.md
docs/tutorials/: first-inventory.md
lshw/: __init__.py  __main__.py
lshw/classes/: __init__.py  base_board.py  bus_pci.py  cache_memory.py  cd_rom.py  communication.py  computer_system.py  firmware.py  graphic_card.py  hardware.py  hardware_class.py  ide.py  logical_disk.py  network_card.py  partition_disk.py  pci.py  physical_disk.py  physical_memory.py  power.py  printer.py  processor.py  sound_device.py  usb.py  usb_device.py
packaging/wpt/: build_wpt.py
packaging/wpt/pms/: install.py  metadata.json  remove.py
prd/: README.md
prd/appendix/: component-relationships.md  data-model.md  enum-dictionary.md  parity-specification.md  security-model.md  wmi-query-reference.md
prd/components/: 01-computer-system.md  02-base-board.md  03-firmware.md  04-processor.md  05-physical-memory.md  06-pci.md  07-ide.md  08-physical-disk.md  09-partition-disk.md  10-logical-disk.md  11-usb.md  12-usb-device.md  13-cd-rom.md  14-graphic-card.md  15-network-card.md  16-sound-device.md  17-power.md  18-printer.md  19-communication.md  20-cache-memory.md
tests/: conftest.py  test_cache_memory.py  test_cd_rom.py  test_cli.py  test_cli_json.py  test_communication.py  test_computer_system.py  test_firmware.py  test_graphic_card.py  test_hardware_class.py  test_ide.py  test_logical_disk.py  test_network_card.py  test_partition_disk.py  test_physical_disk.py  test_physical_memory.py  test_power.py  test_printer.py  test_processor.py  test_sound_device.py  test_usb.py  test_usb_device.py
