# https://setuptools.pypa.io/

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lshw"
dynamic = ["version"]
authors = [
  {name = "Jose Antonio Chavarría", email = "jachavar@gmail.com"},
  {name = "Alfonso Gómez Sánchez", email = "agomez@zaragoza.es"}
]
maintainers = [
  {name = "Jose Antonio Chavarría", email = "jachavar@gmail.com"},
]
license = { text = "GPL-3.0-or-later" }
description = "LsHw Windows Emulator is a simplified Windows port of Hardware Lister project"
readme = "README.md"
keywords = ["hardware", "windows", "lshw"]
requires-python = ">=3.6"
dependencies = [
    "psutil",
    "wmi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Programming Language :: Python",
    "Topic :: Utilities",
]

[project.urls]
homepage = "https://github.com/migasfree/lshw-windows-emulator"
repository = "https://github.com/migasfree/lshw-windows-emulator"
"Bug Report" = "https://github.com/migasfree/lshw-windows-emulator/issues"

[project.scripts]
lshw = "lshw.__main__:main"

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
version = {attr = "lshw.__version__"}
