# https://setuptools.pypa.io/

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lshw"
dynamic = ["version"]
authors = [
  {name = "Jose Antonio Chavarría", email = "jachavar@gmail.com"},
  {name = "Alfonso Gómez Sánchez", email = "agomez@zaragoza.es"}
]
maintainers = [
  {name = "Jose Antonio Chavarría", email = "jachavar@gmail.com"},
]
license = { text = "GPL-3.0-or-later" }
description = "LsHw Windows Emulator is a simplified Windows port of Hardware Lister project"
readme = "README.md"
keywords = ["hardware", "windows", "lshw"]
requires-python = ">=3.6"
dependencies = [
    "psutil>=6.0.0",
    "WMI>=1.5.1",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Programming Language :: Python",
    "Topic :: Utilities",
]

[project.urls]
homepage = "https://github.com/migasfree/lshw-windows-emulator"
repository = "https://github.com/migasfree/lshw-windows-emulator"
"Bug Report" = "https://github.com/migasfree/lshw-windows-emulator/issues"

[project.scripts]
lshw = "lshw.__main__:main"

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
version = {attr = "lshw.__version__"}

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "pip-audit>=2.7.0",
    "pre-commit>=3.5.0",
    "build>=1.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py37"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = ["E501"]  # line too long (handled by formatter)

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

